[gd_scene load_steps=9 format=3 uid="uid://kgolits6jtbk"]

[ext_resource type="Script" path="res://mobs/mob_spawner.gd" id="1_e3exn"]
[ext_resource type="PackedScene" uid="uid://0h44m27xx7pv" path="res://mobs/mob.tscn" id="2_ngvwt"]
[ext_resource type="Texture2D" uid="uid://cvgbk0l7fma7i" path="res://art/Tilemap/tilemap.png" id="3_r5u32"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilbg1"]
atlas = ExtResource("3_r5u32")
region = Rect2(119, 51, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_std6d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilbg1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6aay"]
atlas = ExtResource("3_r5u32")
region = Rect2(102, 51, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b45u3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6aay")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hvnb"]
size = Vector2(16, 16)

[node name="MobSpawner" type="Area2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource("1_e3exn")
mob_scene = ExtResource("2_ngvwt")
spawn_rate = 3.0
sprite = SubResource("SpriteFrames_std6d")

[node name="SpawnerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b45u3")

[node name="MobSpawnShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3hvnb")

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
